--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -8,7 +8,9 @@
                 <a class="nav-link active" href="{% url 'account:user_register' %}">Register</a>
                 <a class="nav-link active" href="{% url 'account:user_login' %}">Login</a>
             {% endif %}
-
+            {% if request.user.is_admin %}
+                <a class="nav-link active" href="{% url 'home:bucket' %}">Bucket</a>
+            {% endif %}
         </div>
     </div>
 </nav>
