--- a/home/templates/home/bucket.html
+++ b/home/templates/home/bucket.html
@@ -17,8 +17,8 @@
         <th scope="row">{{ forloop.counter }}</th>
         <td>{{ obj.Key }}</td>
         <td>{{ obj.Size|filesizeformat }}</td>
-        <td><a href="#">download</a></td>
-        <td><a href="#">delete</a></td>
+        <td><a href="{%url 'home:download_obj_bucket' obj.Key%}">download</a></td>
+        <td><a href="{% url 'home:delete_obj_bucket' obj.Key%}">delete</a></td>
     </tr>
     {% endfor %}
     </tbody>
