--- a/home/templates/home/detail.html
+++ b/home/templates/home/detail.html
@@ -4,6 +4,6 @@
     <h2>{{product.name}}</h2>
     <small>{{product.created}}</small>
     <p>{{product.price}} $</p>
-    <img src="{{product.image.url}}">
+    <img src="{{product.image.url}}" style="width: 300px;">
     <p>{{product.description}}</p>
 {% endblock %}
