--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     {% for product in products%}
-        <div class='card' style='width: 18rem;'>
+        <div class='card' style='width: 18rem; display: inline-block;'>
             <img src='{{product.image.url}}' class='card-img-top'>
             <div class='card-body'>
                 <a href='{{ product.get_absolute_url }}' class='card-title'>{{ product.name }}</a>
