--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -6,6 +6,10 @@
 {%endblock%}
 
 {% block content %}
+    {%for category in categories%}
+        <a href="{{category.get_absolute_url}}" class="btn btn-info">{{category.name}}</a>
+    {%endfor%}
+    <br/>
     {% for product in products%}
         <div class='card' style='width: 18rem; display: inline-block;'>
             <img src='{{product.image.url}}' class='card-img-top'>
