Implement cart management

--- a/home/templates/home/detail.html
+++ b/home/templates/home/detail.html
@@ -6,4 +6,10 @@
     <p>{{product.price}} $</p>
     <img src="{{product.image.url}}" style="width: 300px;">
     <p>{{product.description}}</p>
+    <br/>
+    <form action='{% url 'orders:cart_add' product.id %}' method='POST'>
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type='submit' value='Add to Cart'>
+    </form>
 {% endblock %}
