--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -4,6 +4,7 @@
             <a class="nav-link active" href="{% url 'home:home' %}">Home</a>
             {% if request.user.is_authenticated %}
                 <a class="nav-link active" href="{% url 'account:user_logout' %}">Logout</a>
+                 {% comment %} In {{cart|length}} cart is the dict key name in context_processors.py not the method name {% endcomment %}
                 <a class="nav-link active" href="{% url 'orders:cart' %}">Cart {{cart|length}}</a>
             {%else%}
                 <a class="nav-link active" href="{% url 'account:user_register' %}">Register</a>
